--- a/MediServe/res/layout/planofcare.xml
+++ b/MediServe/res/layout/planofcare.xml
@@ -3,9 +3,11 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="match_parent"
+  android:background="#ffffff">
  
   <TextView android:text="Plan of Care"
+      		  android:textColor="#000000"
               android:padding="15dip"
               android:textSize="18dip"
               android:layout_width="fill_parent"
