--- a/MediServe/res/layout/changepass.xml
+++ b/MediServe/res/layout/changepass.xml
@@ -68,22 +68,38 @@
         android:textColor="#000000"
         android:background="#ffffff"
         />
-    <Button 
-        android:id="@+id/ok_button"
-        android:text="OK"
-        android:layout_width="100dp"
+    <LinearLayout
+        android:orientation="horizontal"
+
+        android:paddingLeft="4.0dip"
+        android:paddingTop="5.0dip"
+        android:paddingRight="4.0dip"
+        android:paddingBottom="1.0dip"
+        android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
-        android:textColor="#ff0000ff"
-        android:background="@layout/buttonshape1"
-        />
-    <Button 
-        android:id="@+id/cancel_button"
-        android:text="Cancel"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:textColor="#ff0000ff"
-        android:background="@layout/buttonshape1"
-        />
+        android:layout_below="@+id/TextView01" >
+    
+    
+	    <Button 
+	        android:id="@+id/ok_button"
+	        android:text="OK"
+	        android:layout_width="0dp"
+	        android:layout_height="fill_parent"
+	        android:textColor="#ff0000ff"
+	        android:background="@layout/buttonshape1"
+	        android:layout_weight="1"
+	        />
+	    <Button 
+	        android:id="@+id/cancel_button"
+	        android:text="Cancel"
+	        android:layout_width="0dp"
+	        android:layout_height="fill_parent"
+	        android:textColor="#ff0000ff"
+	        android:background="@layout/buttonshape1"
+	        android:layout_weight="2"
+	        />
+	    
+	    </LinearLayout>
     <TextView
 	    android:id="@+id/result"
 	    android:layout_width="fill_parent"
