--- a/MediServe/res/layout/mainhorizontal.xml
+++ b/MediServe/res/layout/mainhorizontal.xml
@@ -5,16 +5,20 @@
     android:orientation="horizontal" >
     
     <fragment
-        android:name="com.example.news.ArticleListFragment"
+        android:name="your.project.mediserve.Information"
         android:id="@+id/list"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+        <!-- Preview: layout=@layout/information -->
+    </fragment>
         
     <fragment
-        android:name="com.example.news.ArticleReaderFragment"
+        android:name="your.project.mediserve.PatientInfo"
         android:id="@+id/viewer"
         android:layout_weight="2"
         android:layout_width="0dp"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+        <!-- Preview: layout=@layout/patientinformation -->
+    </fragment>
 </LinearLayout>
