--- a/MediServe/res/layout/findmypatients.xml
+++ b/MediServe/res/layout/findmypatients.xml
@@ -64,6 +64,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         />
+    <ListView 
+                android:id="@+id/list"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"/>
      </LinearLayout>
 
       
