--- a/MediServe/res/layout/changepass.xml
+++ b/MediServe/res/layout/changepass.xml
@@ -1,108 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" 
-    android:background="@string/bluebkgd">
+    android:orientation="vertical" >
 
-    <TextView
+   <TextView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Username:" 
-        android:textColor="#000000"
-        android:background="#ffffff"/>
+       android:layout_height="wrap_content"
+        android:text="Username:" />
+
     <EditText
         android:id="@+id/username"
         android:singleLine="true"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="User ID"
-        android:textColor="#000000"
-        android:background="#ffffff"
+       android:layout_width="fill_parent"
+       android:layout_height="wrap_content"
         />
+
     <TextView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Old Password:"
-        android:textColor="#000000"
-        android:background="#ffffff"
         />
+
     <EditText
         android:id="@+id/oldpassword"
-        android:password="true"
+      android:password="true"
         android:singleLine="true"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:background="#ffffff"
         />
+
     <TextView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="New Password:"
-        android:textColor="#000000"
-        android:background="#ffffff"
         />
+
     <EditText
         android:id="@+id/newpassword"
         android:password="true"
         android:singleLine="true"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:background="#ffffff"       
         />
+
     <TextView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Confirm Password:"
-        android:textColor="#000000"
-        android:background="#ffffff"
         />
+
     <EditText
         android:id="@+id/confirmpassword"
         android:password="true"
         android:singleLine="true"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:background="#ffffff"
         />
-    <LinearLayout
-        android:orientation="horizontal"
 
-        android:paddingLeft="4.0dip"
-        android:paddingTop="5.0dip"
-        android:paddingRight="4.0dip"
-        android:paddingBottom="1.0dip"
-        android:layout_width="fill_parent" 
+    <Button 
+        android:id="@+id/ok_button"
+        android:text="OK"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/TextView01" >
-    
-    
-	    <Button 
-	        android:id="@+id/ok_button"
-	        android:text="OK"
-	        android:layout_width="0dp"
-	        android:layout_height="fill_parent"
-	        android:textColor="#ff0000ff"
-	        android:background="@layout/buttonshape1"
-	        android:layout_weight="1"
-	        />
-	    <Button 
-	        android:id="@+id/cancel_button"
-	        android:text="Cancel"
-	        android:layout_width="0dp"
-	        android:layout_height="fill_parent"
-	        android:textColor="#ff0000ff"
-	        android:background="@layout/buttonshape1"
-	        android:layout_weight="2"
-	        />
-	    
-	    </LinearLayout>
+        />
+
+    <Button 
+        android:id="@+id/cancel_button"
+        android:text="Cancel"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <Button 
+        android:id="@+id/changePass_button"
+        android:text="Change Password"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        />
+
     <TextView
-	    android:id="@+id/result"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    />
+      android:id="@+id/result"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      />
+
 </LinearLayout>
